--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ p {
 }
 </style>
 
-  <title>Loan Simulation v916_12</title>
+  <title>Loan Simulation v2</title>
 
 	<script>
 	   	// Detection of old browsers that do not support the canvas element
