--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ p {
 }
 </style>
 
-  <title>Loam Simulation v916</title>
+  <title>Loan Simulation v916</title>
 
 	<script>
 	   	// Detection of old browsers that do not support the canvas element
